# agentic-resume-backend

./: .gitignore  README.md  db_check.py  pyproject.toml  start_backend.ps1  system_prompt_chat.md  system_prompt_score.md  test_api.py  test_upload.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/core/: config.py  latex_setup.py  utils.py
app/db/: mongodb.py
app/models/: audit_log.py  notification.py  resume.py  user.py
app/services/: ai_service.py  audit_service.py  credit_service.py  email_service.py  file_service.py  latex_service.py  notification_manager.py  notification_service.py  resume_service.py
public/temp_latex/02054d1e-ff2d-4542-8f6d-8a92c8979ecd/: resume.tex
public/temp_latex/13777ae7-a281-4b83-8f8f-f6cbf7e4ae90/: resume.tex
public/temp_latex/1bed8890-5a90-447e-a0be-c2b389206797/: resume.tex
public/temp_latex/1cdf72b3-936c-4cac-95d2-85a5aea93ade/: resume.tex
public/temp_latex/2736eea3-0176-4b4b-a467-6f69ad256923/: resume.tex
public/temp_latex/2aa2661e-407d-459a-a704-f50754563fff/: resume.tex
public/temp_latex/46ac9c31-d224-46b4-b6ac-877b8c1670c2/: resume.tex
public/temp_latex/4fc90f7b-041d-46d2-b9bc-d6ceaa87e874/: resume.tex
public/temp_latex/5ddc0766-ed71-4afd-b5ed-f449a0bd4673/: resume.tex
public/temp_latex/5f4b5936-016c-4f12-8e4c-3fa73f769a90/: resume.tex
public/temp_latex/62496295-cdd4-4773-a843-b62b959a8f35/: resume.tex
public/temp_latex/6ce9f3cc-2e74-4f8c-8bdd-0357d43d0834/: resume.tex
public/temp_latex/7f5778d6-8d7a-4d15-8f3e-d4d3237b4cf1/: resume.tex
scripts/: __init__.py  setup_latex.py
(+16 files in other folders)
